--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,10 @@
     .container {
         padding: 0 24px;
     }
-    
+    .xbutton {
+        color:#ffffff!important;
+        opacity: 0.8!important;
+    }
     .row {
         margin-left: 0px!important;
         margin-right: 0px!important;
@@ -219,10 +222,10 @@ body{
     .list_head{
         font-family: open sans;
         font-size: 18px;
-        font-weight: 400;
+        font-weight:500;
         letter-spacing: 0.3px;
         line-height: 24px;
-        color:#232323;
+        color:#000000;
         opacity:1;
     }
     .blog_list{
@@ -231,6 +234,7 @@ body{
     }
     .list_body{
         padding-left: 20px;
+        color:#1266A7;
     }
     .list_body li{
         color:#b4b4b4;
@@ -329,7 +333,7 @@ body{
         border-top: 2px solid #606060;
         margin-top: 16px;
         line-height: 16px;
-        opacity: 0.5;
+        opacity: 0.2;
     }
     .list_img{
         margin-top: 3px;
