--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,15 @@
 /* img full*/
 
-body {font-family: Arial, Helvetica, sans-serif;}
+body {font-family: open sans;}
 
 #myImg {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 .xc {
-    font-family: open sans;
+    font-family: open sans!important;
     margin-left:5px;
     font-size:15px!important;
     opacity: 0.6;
