--- a/css/main.css
+++ b/css/main.css
@@ -440,6 +440,7 @@ body{
         line-height: 23px;
         letter-spacing: -1px;
         color:#1266A7;
+        margin-left: 8px!important;
     }
     
     .para_list{
