--- a/css/cards_main.css
+++ b/css/cards_main.css
@@ -9,7 +9,7 @@
 }
 .navbar-brand{
         font-size: 14px!important;
-    margin: -11px 0px 0px 3px!important;
+    margin: -11px 0px 0px 1px!important;
 }
 .navbar-toggler {
        padding: 3px 15px;
@@ -252,7 +252,7 @@ tr:hover {background-color:#f5f5f5;}
     color:#ACAAAA;
     opacity: 1;
     text-align:center;
-        margin: 3px 9px 6.8px -6.5px;
+        margin: 3px 9px 6.8px -9.5px;
     
 }
 .card_footer{
@@ -282,7 +282,7 @@ tr:hover {background-color:#f5f5f5;}
    width:80px;
     height: 29px;
     opacity: 1;
-    -top:3px;
+    margin-top:2px;
 }
     .button{
         width:96px;
