--- a/css/cards_main_4.css
+++ b/css/cards_main_4.css
@@ -1,11 +1,25 @@
 .rect{
     width:100%;
     height:auto;
-    background-color: #F7F1EC;
+    background-color: #FFFFFF;
     border-radius: 8px;
+   
     opacity: 1;
     
     
+}
+.rect2{
+    width:100%;
+    height:auto;
+    background-color: #FAFAFA;
+    border-radius: 8px;
+/*
+    border-left: 0px solid #E9E9E9;
+    border-right:0px solid #E9E9E9;
+    border-top:0px solid #E9E9E9;
+    border-bottom:2px solid #E9E9E9;
+*/
+    opacity: 1;  
 }
 .navbar-brand{
         font-size: 14px!important;
@@ -214,8 +228,10 @@ tr:hover {background-color:#f5f5f5;}
     color:#2BC998;
     letter-spacing: 1.2px;
     letter-spacing:1px;
+/*
     margin-top:17px;
     margin-left: 16.5px;
+*/
 }
 .golbtn{
     width: 106px;
@@ -225,11 +241,15 @@ tr:hover {background-color:#f5f5f5;}
     opacity: 1;
     background-color: white;
     float:right;
+    color:#2BC998;
+    font-size: 14px;
+    font-family: open sans;
+    font-weight: 600;
     margin-left:4px;
     margin-top:23px;
     margin-bottom:4px;
     margin-right: 4px;
-    padding-top:3p
+    padding: 5px 0px 0px 12px!important;
     
 }
 .card_head{
@@ -254,8 +274,7 @@ tr:hover {background-color:#f5f5f5;}
     color:#ACAAAA;
     opacity: 1;
     text-align:center;
-        margin: 3px 9px 6.8px -12.5px;
-    
+       margin: 3px 9px 15.8px -12.5px;
 }
 .card_footer{
     width:58px;
@@ -598,8 +617,9 @@ body{
     }
     
     .line{
-        border-top: 2px solid #606060;
+        border-top: 1px solid #707070;
         margin-top: 8px;
+        margin-bottom:8px;
         line-height: 16px;
         opacity: 0.2;
     }
@@ -737,4 +757,9 @@ body{
    font-size:10px!important;
     font-family: open sans!important;
     color:#8F8F8F!important; 
+}
+.photo{
+      width: 100px;
+    height: 40px;
+    margin: 21px 0px 0px -1px;
 }
